--- a/entrypoints/popup/index.html
+++ b/entrypoints/popup/index.html
@@ -7,6 +7,7 @@
   <title>Recally Clipper</title>
   <meta name="manifest.type" content="page_action|browser_action" />
   <meta name="manifest.browser_style" content="true|false" />
+  <link rel="stylesheet" href="~/assets/tailwind.css" />
 <body>
   <div id="root"></div>
   <script type="module" src="./main.tsx"></script>
