--- a/entrypoints/popup/index.html
+++ b/entrypoints/popup/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Recally Clipper</title>
   <meta name="manifest.type" content="page_action|browser_action" />
   <meta name="manifest.browser_style" content="true|false" />
